[package]
name = "wiki-graph"
version = "0.1.0"
authors = ["francis-du <francis@francisdu.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
log = "0.4.11"
fern = "0.5"
structopt = "0.3"
wikipedia = "0.3"
dirs = "3.0.1"
reqwest = "0.9.8"
whatlang = "0.11.1"
rand = "0.8.2"

tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }

serde_json = "1.0"
serde_derive = "0.9"
serde = { version = "1.0", features = ["derive"] }